8343205: CompileBroker::possibly_add_compiler_threads excessively polls available memory